<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_local_cafe_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/cafe"
        />

    <item
        android:id="@+id/navigation_graphs"
        android:icon="@drawable/ic_graphs_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/graphs"
        />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_account_circle_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/user" />

</menu>
